--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .grid {
   display: grid;
-  grid-template-rows: 50px 100px;
+  grid-template-columns: 90px 50px 120px;
 }
 
 .grid-item {
