--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
+  grid-template-columns: 3rem 25% 1fr 2fr;
 }
 
 .grid-item {
