--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 
 .grid {
   display: grid;
-  grid-template-rows: minmax(100px, auto);
-  grid-template-columns: minmax(auto, 50%) 1fr 3em;
+  grid-template-rows: repeat(4, 100px);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .grid-item {
