repeating grid tasks: within track listings

--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ body {
 
 .grid {
   display: grid;
-  grid-template-rows: repeat(4, 100px);
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 30px repeat(3, 1fr) 30px;
 }
 
 .grid-item {
