--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@ body {
 
 .grid {
   display: grid;
-  grid-template-columns: 30px repeat(3, 1fr) 30px;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 20px;
+  grid-column-gap: 5rem;
 }
 
 .grid-item {
