--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body {
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-row-gap: 20px;
-  grid-column-gap: 5rem;
+  grid-gap: 100px 1em;
 }
 
 .grid-item {
