positioning items by grid line numbers

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 
 .grid {
   display: grid;
+  grid-template-rows: repeat(3, 100%);
   grid-template-columns: 1fr 1fr;
-  grid-gap: 2rem;
 }
 
 .grid-item {
@@ -33,4 +33,12 @@ body {
   border: 1px solid #ffff;
   border-radius: 2px;
   background-color: #e91e63;
+}
+
+.grid-item-one {
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  background-color: teal;
 }
