--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .grid {
   display: grid;
-  grid-template-rows: repeat(2, 100%);
+  grid-template-rows: repeat(3, 100%);
   grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -36,7 +36,7 @@ body {
 }
 
 .grid-item-one {
-  grid-column-start: 1;
-  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 4;
   background-color: teal;
 }
