--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@ body {
 
 .grid {
   display: grid;
-  grid-template-rows: repeat(3, 100%);
+  grid-template-rows: repeat(4, 25%);
   grid-template-columns: 1fr 1fr 1fr;
+  height: 100%;
 }
 
 .grid-item {
@@ -36,7 +37,7 @@ body {
 }
 
 .grid-item-one {
-  grid-row-start: 1;
-  grid-row-end: 4;
+  grid-row: 2 / 5;
+  grid-column: 2 / 4;  
   background-color: teal;
 }
