--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 .grid-item-one {
-  grid-row: 2 / 5;
-  grid-column: 2 / 4;  
+  grid-row: 2 / span 3;
+  grid-column: span 2;  
   background-color: teal;
 }
