naming grid lines: multiple names

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 
 .grid {
   display: grid;
-  grid-template-rows: [row-1-start] 1fr [row-2-start] 1fr [row-2-end];
-  grid-template-columns: [col-1-start] 1fr [col-2-start] 1fr [col-3-start] 1fr [col-3-end];
+  grid-template-rows: [row-start row-1-start] 1fr [row-1-end row-2-start] 1fr [row-2-end row-end];
+  grid-template-columns: [col-start] 1fr [col-2-start] 1fr [col-3-start] 1fr [col-end];
   height: 100%;
 }
 
