--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 
 .grid {
   display: grid;
-  grid-template-rows: [row-start row-1-start] 1fr [row-1-end row-2-start] 1fr [row-2-end row-end];
-  grid-template-columns: [col-start] 1fr [col-2-start] 1fr [col-3-start] 1fr [col-end];
+  grid-template-rows: repeat(3, [row-start] 1fr [row-end]);
+  grid-template-columns: repeat(3, [col-start] 1fr [col-end]);
   height: 100%;
 }
 
@@ -37,7 +37,7 @@ body {
 }
 
 .grid-item-one {
-  grid-row: row-2-start / row-end;
-  grid-column: col-2-start / col-end;
+  grid-row: row-start 2 / row-end 3;
+  grid-column: col-start / col-start 3;
   background-color: teal;
 }
